auto-test/tests/chapter_17/invalid_types/void/return_void_as_pointer.c
void *x(void) {
  
  return (void)0;
}
